# decision-table-rs

./: Cargo.toml  sample_input.yaml
src/: main.rs
